<resources>
    <string name="app_name">Matchmaker_2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">승부사 온라인</string>
    <string name="nav_header_subtitle">https://adventurer.co.kr/#/main</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">매치업</string>
    <string name="menu_share">공유하기</string>
    <string name="menu_send">보내기</string>
    <string name="menu_club">클럽</string>
    <string name="menu_item_shop">아이템 샵</string>
    <string name="menu_matchup_result">매치업결과</string>
    <string name="menu_batting_details">배팅내역</string>
    <string name="menu_my_bank">마이뱅크</string>
    <string name="menu_pick">픽</string>
    <string name="menu_my_mission">마이미션</string>
    <string name="menu_mesege">메시지함</string>
    <string name="menu_giftbox">선물상자</string>
    <string name="menu_event">이벤트</string>
    <string name="menu_like">찜하기</string>
    <string name="menu_item_management">아이템관리</string>
    <string name="menu_club_search">클럽찾기</string>
    <string name="menu_bata_search">베타찾기</string>
    <string name="menu_my_room">마이룸</string>
</resources>
